# ember

./: .bazelrc  .gitignore  .gitmodules  BUILD  CMakeLists.txt  MODULE.bazel
ember/: CMakeLists.txt  Ember.h  EmberMain.h
ember/assets/shaders/: mesh_render_system.vert
ember/collections/: CMakeLists.txt  DynamicBitset.h  FreeableVector.h  LinearLinkedLists.h  SmallVector.h
ember/collections/src/: DynamicBitset.cpp
ember/collections/tests/: test_dynamic_bitset.cpp
ember/core/: CMakeLists.txt  Scene.h  SceneManager.h  SystemPhases.h
ember/core/src/: SceneManager.cpp
ember/core/tests/: test_scene_manager.cpp
ember/ecs/: CMakeLists.txt  Component.h  Entity.h  EntitySet.h  Storage.h  System.h  SystemGraph.h  Transform.h  TransformComponent.h  World.h  lib.cpp
ember/ecs/src/: EntitySet.cpp  SystemGraph.cpp  World.cpp
ember/ecs/tests/: test_entity_set.cpp  test_storage.cpp  test_system_graph.cpp  test_world.cpp
ember/geometry/: CMakeLists.txt  Intersect.h  IntersectionTests.h  OctTree.h  QuadTree.h  Ray.h  Shapes.h
ember/geometry/src/: Intersect.cpp  IntersectionTests.cpp
ember/geometry/tests/: test_intersect.cpp  test_oct_tree.cpp  test_quad_tree.cpp  test_ray.cpp
ember/gpu/: AppInfo.h  Buffer.h  CMakeLists.txt  CommandRecorder.h  DescriptorPool.h  DescriptorSetChunk.h  Device.h  GPUDevice.h  GPUInterface.h  GPUResource.h  GraphicsDevice.h  GraphicsInterface.h  Pipeline.h  RenderObjects.h  Renderer.h  SPIRV.h  ShaderModule.h  ShaderReflection.h  VulkanHelpers.h  VulkanInstance.h  Window.h
ember/gpu/examples/: compute_raytracer.cpp  compute_squares.comp  compute_squares.cpp  raytracer.comp  sdl_window.cpp  sdl_window.frag  sdl_window.vert
ember/gpu/src/: CommandRecorder.cpp  DescriptorPool.cpp  Device.cpp  GPUDevice.cpp  GPUInterface.cpp  GPUResource.cpp  GraphicsDevice.cpp  GraphicsInterface.cpp  Renderer.cpp  SPIRV.cpp  SPIRV.h  ShaderReflection.cpp  ShaderReflection.h  Util.h  Vulkan.h  VulkanInstance.cpp  Window.cpp
ember/gpu/tests/: compute_squares.comp  compute_squares.cpp
ember/graphics/: ArcballCamera.h  CMakeLists.txt  CameraComponent.h  Mesh.h  MeshComponent.h  MeshRenderSystem.h  Projections.h  Renderer.h  Renderpass.h  SceneComponent.h  Vertex.h  Window.h
ember/graphics/examples/: sdl_playground.cpp
ember/graphics/examples/mesh_renderer/: CMakeLists.txt  main.cpp  shader.vert
ember/graphics/examples/sdl_window/: CMakeLists.txt  main.cpp  sdl_window.vert
ember/graphics/src/: ArcballCamera.cpp  MeshRenderSystem.cpp  Projections.cpp  Renderer.cpp  Renderpass.cpp  SDLException.h  SceneComponent.cpp  Window.cpp
ember/physics/: CMakeLists.txt  ColliderComponent.h  CollisionSystem.h  ParticleComponent.h  ParticleDragComponent.h  RigidBodyComponent.h  RigidBodySystem.h
ember/physics/particle_engine/: ParticleCollisionSystem.cpp  ParticleCollisionSystem.h  ParticleComponent.h  ParticleSystem.cpp  ParticleSystem.h  SpringSystem.cpp  SpringSystem.h  test_particle_system.cpp  test_spring_system.cpp
ember/physics/src/: ColliderComponent.cpp  CollisionSystem.cpp  ParticleSystem.cpp  RigidBodyComponent.cpp  RigidBodySystem.cpp  SpringSystem.cpp
ember/physics/tests/: glm_compare.h  test_particle_system.cpp  test_rigid_body_component.cpp  test_spring_system.cpp
ember/scripting/python/: CMakeLists.txt
ember/scripting/python/examples/: playground.cpp
ember/scripting/python/tests/: test_python.cpp
ember/src/: Ember.cpp
ember/util/: Allocators.h  ArgParser.h  CMakeLists.txt  ConstPtrSpan.h  Filesystem.h  Log.h  Profiling.h  ResourceManager.h
ember/util/src/: Allocators.cpp  ArgParser.cpp  Filesystem.cpp  Log.cpp
ember/util/tests/: test_allocators.cpp  test_arg_parser.cpp  test_log.cpp
examples/e1/: CMakeLists.txt  main.cpp
src/: main.cpp
tools/meshviewer/: CMakeLists.txt  MeshViewer.cpp  MeshViewer.h  main.cpp
tools/meshviewer/assets/: shader.frag  shader.vert
